--- a/force-app/main/default/classes/MainClass.cls
+++ b/force-app/main/default/classes/MainClass.cls
@@ -1,5 +1,5 @@
 public with sharing class MainClass {
-    public static string debug(String value){
+    public static void debug(String value){
         System.debug(value);
     }
 }
